--- a/CSS/components/main_first_content.css
+++ b/CSS/components/main_first_content.css
@@ -36,6 +36,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    whitespace:nowrap;
     margin-bottom: 20px;
     position: relative;
 }
